--- a/src/app/components/items-list/items-list.component.html
+++ b/src/app/components/items-list/items-list.component.html
@@ -1,12 +1,7 @@
 <div class="container">
     <ul class="items-list">
-        <!-- @for (item of itemData; track $index) {
-            <li class="item">{{item.title}}</li>
-        } -->
-
-        <li class="item"><a href="">dddddddddddddddddd</a></li>
-        <li class="item"><a href="">ddddddddd</a></li>
-        <li class="item"><a href="">ddddddddd</a></li>
-        <li class="item"><a href="">ddddddddd</a></li>
+        @for (item of itemData; track $index) {
+            <li class="item" (click)="clickItem(item._id)">{{item.title}}</li>
+        }
     </ul>
 </div>
