--- a/src/app/components/items-list/items-list.component.scss
+++ b/src/app/components/items-list/items-list.component.scss
@@ -11,7 +11,15 @@
 
 .items-list .item{
     list-style-type: none;
-    padding: 10px 20px;
-    border-bottom: 1px solid #ddd;
+    padding: 15px 20px;
+    border-bottom: 1px solid #ffffff;
+    font-size: 20px;
+    cursor: pointer;
+    font-weight: 900;
+    transition: 0.7s;
+}
+
+.items-list .item:hover{
+    opacity: 0.5;
 }
 
